Fix #site-header z-index issue on cover template

--- a/style.css
+++ b/style.css
@@ -1585,7 +1585,7 @@ body:not(.enable-search-modal) .site-logo img {
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: 100;
+	z-index: 2;
 }
 
 .overlay-header .header-inner {
@@ -5300,10 +5300,6 @@ a.to-the-top > * {
 
 	#site-header {
 		z-index: 1;
-	}
-
-	.overlay-header #site-header {
-		z-index: 2;
 	}
 
 	.header-inner {
